Update lab